<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="facebook_app_id">951665321609204</string>
    <string name="pop_item_home">Home</string>
    <string name="pop_item_search">Search</string>
    <string name="pop_item_message">Message</string>
    <string name="pop_item_orders">Orders</string>
    <string name="pop_item_share">Share</string>
    <string name="menu_homepage">Home</string>
    <string name="menu_catalog">Category</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_account">Account</string>
    <string name="text_view_detail">Detail</string>
    <string name="app_name">SDKDEMO</string>
    <string name="title_home">KILIMALL</string>
    <string name="title_lifestyle">LIFESTYLE</string>
    <string name="title_lifestyle_2">Lifestyle</string>
    <string name="title_account">ACCOUNT</string>
    <string name="action_settings">Setting</string>
    <string name="toast_text">Refreshed</string>
    <string name="tel">Hotline: 4008003333</string>
    <string name="more_aboutus_appname">Kilimall Online Shopping</string>
    <string name="web">www.kilimall.com</string>
    <string name="app_copyright">Copyright © 2018 Kilimall, All Rights Reserved</string>
    <string name="text_groupbuy">Groupbuy</string>
    <string name="text_xianshi">Flash Sale</string>
    <string name="text_appoint">Appointment</string>
    <string name="text_fcode">F-Code</string>
    <string name="text_presell">Pre-sell</string>
    <string name="text_virtual">Virtual</string>
    <string name="text_mine_order">Orders</string>
    <string name="text_mine_vorder">Cards</string>
    <string name="text_mine_fav_goods">Wish List</string>
    <string name="text_mine_history">History View</string>
    <string name="text_mine_vou">Coupon</string>
    <string name="text_mine_address">Address</string>
    <string name="text_mine_fav_storeorder">Shops</string>
    <string name="text_share_invitation_code">Share My Invitation Code:</string>
    <string name="text_share_desc">Share your invitation code and receive Kilimall rewards</string>
    <string name="text_get_share_desc">Share your unique invitation code to your friends and enjoy the benefits in return.</string>
    <string name="text_verify_share_desc">You haven\'t verified your account yet.</string>
    <string name="text_verify_account">Verify</string>
    <string name="xlistview_header_hint_normal">Pull to refresh</string>
    <string name="xlistview_header_hint_ready">Release to refresh</string>
    <string name="xlistview_header_hint_loading">Loading…</string>
    <string name="xlistview_header_last_time">Update: </string>
    <string name="xlistview_footer_hint_normal">More</string>
    <string name="xlistview_footer_hint_ready">Release to view more</string>
    <string name="text_search_goods">&#160;&#160;Search for …</string>
    <string name="category_title">Category</string>
    <string name="category_title_2">CATEGORY</string>
    <string name="category_two_all_goods">All Products</string>
    <string name="goods_list_new">New Arrivals</string>
    <string name="text_price">Price</string>
    <string name="text_sales_num">Sales</string>
    <string name="text_sales_hot">Popularity</string>
    <string name="cart_no_goods">No items in cart</string>
    <string name="btn_see_other">Continue Shopping</string>
    <string name="cart_title">Shopping Cart</string>
    <string name="text_been_removed">Some items have been removed from your cart since they are off shelf.</string>
    <string name="text_click_login">Login</string>
    <string name="settings_title">Settings</string>
    <string name="text_stock">Inventory</string>
    <string name="text_save">Save</string>
    <string name="text_person">Comments</string>
    <string name="text_share">Share</string>
    <string name="text_pic_txt_details">Product Details</string>
    <string name="text_goods_param">Specifications</string>
    <string name="text_goods_eval">Feedback</string>
    <string name="text_shop_info">Shop Info</string>
    <string name="text_goto_shop">Go to Store</string>
    <string name="text_buy_now">Buy</string>
    <string name="text_checkout">Check Out</string>
    <string name="text_selfpick">Pickup Station</string>
    <string name="text_physical">Deliver to Doorstep</string>
    <string name="text_goods_add_cart">Add To Cart</string>
    <string name="text_goods_help">HELP</string>
    <string name="text_maybe_like">You may also like</string>
    <string name="text_goods_num">Items</string>
    <string name="text_store_num">Like</string>
    <string name="text_shop_search">Search</string>
    <string name="text_search">Search</string>
    <string name="text_input_user_name">Enter your account name</string>
    <string name="hint_new_pwd">New Password</string>
    <string name="hint_new_confirm_pwd">Confirm new password</string>
    <string name="hint_user_name">Email/Phone/Username</string>
    <string name="text_reg_user_name">Enter your username</string>
    <string name="text_reg_email">Enter your email</string>
    <string name="text_input_pwd">Enter your password</string>
    <string name="hint_input_pwd">password</string>
    <string name="text_login">Log In</string>
    <string name="text_create">Create Account</string>
    <string name="text_register">SignUp</string>
    <string name="text_login_by_account">Member Login</string>
    <string name="text_login_by_phone">Login Without Password</string>
    <string name="text_forgot_pwd">Forgot Password</string>
    <string name="text_no_refer_code">I have no referral code, skip</string>
    <string name="text_title_refer_code">Referral</string>
    <string name="text_hint_refer_code">Enter referral code</string>
    <string name="text_next">Next</string>
    <string name="text_reset_ok">OK</string>
    <string name="text_link">Link</string>
    <string name="title_bind">Bind</string>
    <string name="text_enter_name">Please enter your name</string>
    <string name="hint_bind_name">username</string>
    <string name="text_enter_username">Please enter username</string>
    <string name="text_refer_code_benefits">Referral code benefits</string>
    <string name="text_register_fast">Sign Up</string>
    <string name="text_pwd_confirm">Re-enter your password</string>
    <string name="text_input_email">Enter your E-mail address</string>
    <string name="hint_input_email">Enter your email</string>
    <string name="hint_input_code">Enter Code</string>
    <string name="hint_invite_code">Enter your invite code</string>
    <string name="text_register_new_user">Sign Up</string>
    <string name="text_friend_list">Friends</string>
    <string name="order_list_title">My Orders</string>
    <string name="title_order_notice">Order Notice</string>
    <string name="text_goods_add_cart_ok">Added to cart</string>
    <string name="cart_total_price">Total</string>
    <string name="btn_checkout">Check Out</string>
    <string name="cart_no_goods_select">You have not selected any item</string>
    <string name="text_virtual_order_list">Cards</string>
    <string name="text_coupon_manage">Vouchers</string>
    <string name="favstore_title">Saved Shops</string>
    <string name="address_manage_title">Shipping Address</string>
    <string name="text_new_add">Add</string>
    <string name="add_new_address_title">Add Address</string>
    <string name="add_edit_address_title">Edit Address</string>
    <string name="text_input_name">Enter your name</string>
    <string name="text_input_first_name">First name</string>
    <string name="text_input_last_name">Last name</string>
    <string name="text_address_address">Address</string>
    <string name="text_address_text_pickup">Choose Pickup Station</string>
    <string name="text_address_pickup">Pickup</string>
    <string name="text_address_state">Province</string>
    <string name="text_address_city">City</string>
    <string name="toast_address_select_province">Please select a province</string>
    <string name="toast_address_city">Please select a city</string>
    <string name="toast_address_pickup">Please select a pickup address</string>
    <string name="toast_address_street">Please enter street address</string>
    <string name="text_input_address_details">Enter your street</string>
    <string name="text_input_mobile">Your phone no. eg. 0742000111</string>
    <string name="text_input_tel">Enter your land line No.</string>
    <string name="dialog_select_city_title">Select Shipping Address</string>
    <string name="dialog_select_city_province">State/Province:</string>
    <string name="dialog_select_city_city">City/Town:</string>
    <string name="dialog_select_city_area">Area:</string>
    <string name="dialog_select_selfpick">PICKUP:</string>
    <string name="dialog_select_address">Address:</string>
    <string name="btn_ok">Yes</string>
    <string name="btn_cancel">Cancel</string>
    <string name="dialog_cancel">No</string>
    <string name="dialog_ok">Yes</string>
    <string name="dialog_title_tips">Tips</string>
    <string name="dialog_title_confirm_receive">Confirm Received Goods</string>
    <string name="dialog_iknow">I Know</string>
    <string name="toast_null_address">Some shipping info missed</string>
    <string name="btn_submit">Submit</string>
    <string name="settings_item_about_us">About Us</string>
    <string name="settings_item_update">Check for Updates</string>
    <string name="settings_item_clear_cache">Clear Cookies</string>
    <string name="settings_item_help">Online help</string>
    <string name="settings_item_feedback">Submit Feedback</string>
    <string name="settings_item_customer_service">Customer Service</string>
    <string name="help_title">Online help</string>
    <string name="settings_btn_exit">Logout</string>
    <string name="btn_finish">OK</string>
    <string name="feedback_content_hint">Kindly enter your comments about our service</string>
    <string name="text_feedback_success">Feedback Successfully</string>
    <string name="progress_dialog_title">Tips</string>
    <string name="progress_dialog_content">Deleting…</string>
    <string name="progress_dialog_process">Process…</string>
    <string name="wx_dialog_process">Process…</string>
    <string name="progress_dialog_loading">Loading…</string>
    <string name="dialog_title">Alert</string>
    <string name="dialog_content_exit">Are you sure want to logout?</string>
    <string name="btn_ok_2">Confirm</string>
    <string name="btn_ok_received">Confirm Receipt</string>
    <string name="btn_send">Send</string>
    <string name="text_edit">Edit</string>
    <string name="btn_del">Delete</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="btn_lock">Locking</string>
    <string name="btn_look_ems">View Logistics</string>
    <string name="btn_order_pay">Pay Now</string>
    <string name="btn_buy_again">Buy Again</string>
    <string name="text_topic_page">Special Page</string>
    <string name="dialog_content_operate_confirm">What would you like to do to this address?</string>
    <string name="dialog_content_del_goods">Are you sure to remove this product in the cart?</string>
    <string name="dialog_content_del">Are you sure you want to remove item?</string>
    <string name="dialog_content_del_fav">Are you sure to delete it?</string>
    <string name="toast_svae_ok">Saved</string>
    <string name="toast_data_load_fail">Loading failed, please try again later</string>
    <string name="toast_del_success">Deleted</string>
    <string name="toast_null_city">City information can not be empty</string>
    <string name="toast_null_area">Area information can not be empty</string>
    <string name="toast_null_name_first">First name cannot be blank</string>
    <string name="toast_null_name_last">Last name cannot be blank</string>
    <string name="toast_null_phone">Phone number cannot be blank</string>
</resources>