<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dip"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/ll_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_login_by_account"
                android:layout_width="fill_parent"
                android:layout_height="42dp"
                android:gravity="center"
                android:text="@string/text_login_by_account"
                android:textColor="@color/text_login_tab_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider_account"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/app_head_bg" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_login_by_phone"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:gravity="center"
                android:text="@string/text_login_by_phone"
                android:textColor="@color/text_login_tab_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider_phone"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/app_head_bg"
                android:visibility="invisible" />
        </LinearLayout>


    </LinearLayout>

    <!--phone/username/email-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--facebook/twitter-->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ll_third_login"
            android:layout_marginLeft="@dimen/margin_login_reg"
            android:layout_marginRight="@dimen/margin_login_reg"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_gravity="center"
                android:background="@color/color_font_explain_afb" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/color_white"
                android:gravity="center"
                android:text="Login via"
                android:textColor="@color/color_font_title" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/ll_third_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="@dimen/margin_login_reg"
            android:layout_marginRight="@dimen/margin_login_reg"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_fb"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:drawableLeft="@null" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_login_by_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_login_reg"
                android:layout_marginRight="@dimen/margin_login_reg"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="0dp" />

                    <EditText
                        android:id="@+id/loginNameID"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dip"
                        android:layout_marginRight="5dip"
                        android:background="@null"
                        android:hint="@string/hint_user_name"
                        android:maxLength="50"
                        android:padding="10dip"
                        android:singleLine="true"
                        android:textColor="@color/color_font_title"
                        android:textColorHint="@color/et_hint_color"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="39dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/color_font_title" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_login_reg"
                android:layout_marginRight="@dimen/margin_login_reg"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="0dp" />

                    <EditText
                        android:id="@+id/loginPassWordID"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dip"
                        android:layout_marginRight="5dip"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/hint_input_pwd"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:padding="10dip"
                        android:singleLine="true"
                        android:textColor="@color/color_font_title"
                        android:textColorHint="@color/et_hint_color"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/iv_pwd_state"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="10dp"
                        android:visibility="gone" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="39dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/color_font_title" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_forgot_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/margin_login_reg"
                android:layout_marginTop="15dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:text="@string/text_forgot_pwd"
                android:textColor="@color/color_font_title" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/submitID"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginBottom="25dp"
                    android:layout_marginLeft="@dimen/margin_login_reg"
                    android:layout_marginRight="@dimen/margin_login_reg"
                    android:text="@string/text_login" />

                <Button
                    android:id="@+id/btn_create"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginLeft="@dimen/margin_login_reg"
                    android:layout_marginRight="@dimen/margin_login_reg"
                    android:text="@string/text_create" />
            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_login_by_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:background="@null"
                    android:hint="@string/text_input_user_name"
                    android:padding="10dip"
                    android:singleLine="true"
                    android:textColorHint="@color/et_hint_color"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_divider" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp" />

                <EditText
                    android:id="@+id/et_code"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/text_input_pwd"
                    android:inputType="textPassword"
                    android:padding="10dip"
                    android:singleLine="true"
                    android:textColorHint="@color/et_hint_color"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="100dp"
                    android:layout_height="42dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dip"
                    android:layout_marginRight="10dp"
                    android:text="@string/text_login"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_divider" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>